# hux

./: .gitignore  README.md  install.sh  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
daemon/: Package.swift
daemon/Sources/HuxDragDaemon/: DragController.swift  DragPreviewWindow.swift  DropClassifier.swift  GhosttyBridge.swift  HuxPaths.swift  Log.swift  Protocol.swift  SocketServer.swift  main.swift
server/: Cargo.toml
server/src/: framing.rs  main.rs  pane.rs  protocol.rs  server.rs
src/: boot.ts  debug-log.ts  drag-bridge.ts  drag.ts  expose-graphics.ts  frame-writer.ts  graphics.ts  hover-peek.ts  index.ts  ipc-client.ts  ipc.ts  mouse.ts  pane-view.ts  peek-graphics.ts  pointer-shape.ts  runtime.ts  scrollback.ts  search.ts  selection.ts  session-cli.ts  session-ui.ts  tab-view.ts  terminal-caps.ts  terminal-escapes.ts  terminal-probe.ts  terminal.ts  update.ts  version.ts  view.ts  welcome.ts  wm.ts
src/layout/: enums.ts  flex.ts
