[package]
name = "hux-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "hux-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time", "sync", "process", "fs"] }
pty-process = { version = "0.5", features = ["async"] }
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
